# fab

./: .travis.yml  appveyor.yml  sort.cabal
benchmarks/: .ghci  report.html  sort-benchmarks.cabal
benchmarks/src/: sort-benchmarks.hs  sort-tests.hs
src/Data/: Sort.hs
