Name:                   sort-benchmarks
Version:                0.0.0.1
Synopsis:               Haskell sorting toolkit benchmarks
Description:            A library of general-purpose sorting utilities.
Homepage:               https://github.com/cdornan/sort
Author:                 Chris Dornan
License:                BSD3
license-file:           LICENSE
Maintainer:             Chris Dornan <chris@chrisdornan.com>
Copyright:              Chris Dornan 2017
Category:               Text
Build-type:             Simple
Stability:              Experimental
bug-reports:            https://github.com/cdornan/sort/issues

Cabal-Version:          >= 1.10

Source-Repository head
    type:               git
    location:           https://github.com/cdornan/sort.git

Executable sort-benchmarks
    Hs-Source-Dirs:     ../src src

    Main-Is:            sort-benchmarks.hs

    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs

    Build-depends:
        base                 >= 4 && < 5
